crates/ridge-parser/tests/fixtures/errors/p001_fn_missing_name.rg
-- expect: P001
-- Trigger: `fn` keyword without a function name.
fn = x
